Pager layout overflow fix commit_hash:0f92cc90b9f638139a4554b13342225fdd106f59

--- a/client/web/divkit/src/components/pager/Pager.module.css
+++ b/client/web/divkit/src/components/pager/Pager.module.css
@@ -16,6 +16,8 @@
 
 .pager__item {
     display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 100%;
     max-width: 100%;
     max-height: 100%;
     overflow: hidden;
